refactor: 주문 기능 리팩터링